<resources>
    <string name="app_name">Caavo</string>
    <string name="error">Something went wrong!!</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="story_title">Story Title</string>
    <string name="story_content">Story Content</string>
    <string name="submit">Submit</string>
    <string name="genre">Genre</string>
    <string name="story_add_rule">*You can contribute only 50 words to the story</string>
    <string name="no_stories">No stories</string>
    <string name="your_continue">Your continuation here...</string>
    <string name="search">Search</string>
</resources>
